# cmp

./: .gitignore  CMakeLists.txt  cmp-config.cmake.in  cmp.c  cmp.h  cmp_ext.c  cmp_ext.h
src/: cmp.c  cmp_ext.c
src/cmp/: cmp.h  cmp_ext.h
test/: buf.c
